# anova

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  auth_implementation_summary.md  cloudtrail-bucket-policy.json  docker-compose.yaml  docker-compose.yml  docker-test.sh  extract_logs.py  pyproject.toml  requirements.txt  simulation_results.json  team1_wrapper.json  team2_wrapper.json  test_db_connection.py
.github/workflows/: docker-build-push.yml  terraform-deploy.yml
Documentation/: Current_aws_rds_structure.md  DB_CONNECTION.md  DB_STRUCTURE.md  UPDATE_DEPLOYMENT.md  auth_implementation_plan.md  aws-ecs-deployment.md  database_cleanup.md  database_schema_updates.md
alembic_versions/: env.py
alembic_versions/versions/: 7376c13cba74_initial.py  ae5d6c99dd4d_add_processingtask.py
app/: VERSION_DEPLOYMENT.JSON  config.py  email_example.py  email_sender.py  entrypoint.sh  main.py  models.py
app/database/: apply_schema_updates.py  check_schema.py  cleanup_database.py  common.py  connection.py  create_tables.sql  database_structure_creation.sql  init_db.py  models.py  test_connection.py  update_schema_fields.sql  update_schema_user_reports.sql  update_schema_users.sql
app/frontend/: index.html  openapi-ts.config.ts  package.json  vite.config.ts
app/middleware/: __init__.py  auth_middleware.py  path_middleware.py
app/prompts/: game_simulation_prompt.txt  team_analysis_prompt.txt
terraform/: README.md  cognito.tf  deploy.sh  destroy.sh  get_app_url.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+88 files in other folders)
