[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.9,<3.13"
packages = [{include = "app"}]

dependencies = [
    "fastapi (>=0.111)",
    "uvicorn (==0.23.2)",
    "python-multipart (==0.0.6)",
    "pdfminer-six (==20221105)",
    "pypdf2 (==3.0.1)",
    "pandas (==2.1.1)",
    "numpy (==1.26.0)",
    "python-docx (==1.0.1)",
    "psycopg2-binary (==2.9.9)",
    "pytest (==7.4.2)",
    "python-dotenv (==1.0.0)",
    "boto3 (==1.28.62)",
    "python-jose[cryptography] (==3.3.0)",
    "itsdangerous (==2.1.2)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "instructor[anthropic] (>=1.8.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
